devloper page cta dark mode fix

--- a/app/scss/pages/developer/_cta.scss
+++ b/app/scss/pages/developer/_cta.scss
@@ -63,6 +63,7 @@
             padding-left: 130px;
         }
         .content-button {
+            background: var(--bs-primary-500-2);
             border: 4px solid var(--bs-gray-800);
             display: flex;
             align-items: center;
